Set layout break point to 1380px to avoid overflow issues

--- a/@webwriter/core/model/schemas/resource/plugins/base.css
+++ b/@webwriter/core/model/schemas/resource/plugins/base.css
@@ -107,7 +107,7 @@ body {
   caret-color: currentColor;
 }
 
-@media screen and (min-width: 1130px) and (max-width: 1360px) {
+@media screen and (min-width: 1130px) and (max-width: 1380px) {
   body {
     margin-left: 0;
   }
